atualizando atividades práticas curso descomplicando java e spring