@@ -7,7 +7,7 @@ public class MapAndCollect {
     public static void main(String []args){
         List<String> listaString = Arrays.asList("1","2","3");
         System.out.println(listaString);
-        List<Integer>minhaListaInteira = listaString.stream().map(Integer ::valueOf).toList();
-        System.out.println(minhaListaInteira);
+        List<Integer> listaInteger = listaString.stream().map(Integer::valueOf).collect(Collectors.toList());
+        System.out.println(listaInteger);
     }
 }
